Mycelium/include/preprocessor/MySimpleUIParser.cpp

// Generated from ./MySimpleUI.g4 by ANTLR 4.13.2


#include "MySimpleUIListener.h"
#include "MySimpleUIVisitor.h"

#include "MySimpleUIParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MySimpleUIParserStaticData final {
  MySimpleUIParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MySimpleUIParserStaticData(const MySimpleUIParserStaticData&) = delete;
  MySimpleUIParserStaticData(MySimpleUIParserStaticData&&) = delete;
  MySimpleUIParserStaticData& operator=(const MySimpleUIParserStaticData&) = delete;
  MySimpleUIParserStaticData& operator=(MySimpleUIParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mysimpleuiParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MySimpleUIParserStaticData> mysimpleuiParserStaticData = nullptr;

void mysimpleuiParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mysimpleuiParserStaticData != nullptr) {
    return;
  }
#else
  assert(mysimpleuiParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MySimpleUIParserStaticData>(
    std::vector<std::string>{
      "program", "stateDecl", "rootComponent", "componentCall", "parameterList", 
      "parameter", "element", "propertyAssignment", "expression", "literal", 
      "identifier"
    },
    std::vector<std::string>{
      "", "'state'", "'bind'", "", "", "", "", "'('", "')'", "'{'", "'}'", 
      "':'", "';'", "'='", "','"
    },
    std::vector<std::string>{
      "", "STATE", "BIND", "NUMBER", "STRING", "ID", "AT_ID", "LPAREN", 
      "RPAREN", "LBRACE", "RBRACE", "COLON", "SEMI", "ASSIGN", "COMMA", 
      "WS", "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mysimpleuiParserStaticData = std::move(staticData);
}

}

MySimpleUIParser::MySimpleUIParser(TokenStream *input) : MySimpleUIParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MySimpleUIParser::MySimpleUIParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MySimpleUIParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mysimpleuiParserStaticData->atn, mysimpleuiParserStaticData->decisionToDFA, mysimpleuiParserStaticData->sharedContextCache, options);
}

MySimpleUIParser::~MySimpleUIParser() {
  delete _interpreter;
}

const atn::ATN& MySimpleUIParser::getATN() const {
  return *mysimpleuiParserStaticData->atn;
}

std::string MySimpleUIParser::getGrammarFileName() const {
  return "MySimpleUI.g4";
}

const std::vector<std::string>& MySimpleUIParser::getRuleNames() const {
  return mysimpleuiParserStaticData->ruleNames;
}

const dfa::Vocabulary& MySimpleUIParser::getVocabulary() const {
  return mysimpleuiParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MySimpleUIParser::getSerializedATN() const {
  return mysimpleuiParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

MySimpleUIParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MySimpleUIParser::RootComponentContext* MySimpleUIParser::ProgramContext::rootComponent() {
  return getRuleContext<MySimpleUIParser::RootComponentContext>(0);
}

tree::TerminalNode* MySimpleUIParser::ProgramContext::EOF() {
  return getToken(MySimpleUIParser::EOF, 0);
}

std::vector<MySimpleUIParser::StateDeclContext *> MySimpleUIParser::ProgramContext::stateDecl() {
  return getRuleContexts<MySimpleUIParser::StateDeclContext>();
}

MySimpleUIParser::StateDeclContext* MySimpleUIParser::ProgramContext::stateDecl(size_t i) {
  return getRuleContext<MySimpleUIParser::StateDeclContext>(i);
}


size_t MySimpleUIParser::ProgramContext::getRuleIndex() const {
  return MySimpleUIParser::RuleProgram;
}

void MySimpleUIParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void MySimpleUIParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any MySimpleUIParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MySimpleUIVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

MySimpleUIParser::ProgramContext* MySimpleUIParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MySimpleUIParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MySimpleUIParser::STATE) {
      setState(22);
      stateDecl();
      setState(27);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(28);
    rootComponent();
    setState(29);
    match(MySimpleUIParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StateDeclContext ------------------------------------------------------------------

MySimpleUIParser::StateDeclContext::StateDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MySimpleUIParser::StateDeclContext::STATE() {
  return getToken(MySimpleUIParser::STATE, 0);
}

tree::TerminalNode* MySimpleUIParser::StateDeclContext::ASSIGN() {
  return getToken(MySimpleUIParser::ASSIGN, 0);
}

tree::TerminalNode* MySimpleUIParser::StateDeclContext::SEMI() {
  return getToken(MySimpleUIParser::SEMI, 0);
}

std::vector<tree::TerminalNode *> MySimpleUIParser::StateDeclContext::ID() {
  return getTokens(MySimpleUIParser::ID);
}

tree::TerminalNode* MySimpleUIParser::StateDeclContext::ID(size_t i) {
  return getToken(MySimpleUIParser::ID, i);
}

MySimpleUIParser::ExpressionContext* MySimpleUIParser::StateDeclContext::expression() {
  return getRuleContext<MySimpleUIParser::ExpressionContext>(0);
}


size_t MySimpleUIParser::StateDeclContext::getRuleIndex() const {
  return MySimpleUIParser::RuleStateDecl;
}

void MySimpleUIParser::StateDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStateDecl(this);
}

void MySimpleUIParser::StateDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStateDecl(this);
}


std::any MySimpleUIParser::StateDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MySimpleUIVisitor*>(visitor))
    return parserVisitor->visitStateDecl(this);
  else
    return visitor->visitChildren(this);
}

MySimpleUIParser::StateDeclContext* MySimpleUIParser::stateDecl() {
  StateDeclContext *_localctx = _tracker.createInstance<StateDeclContext>(_ctx, getState());
  enterRule(_localctx, 2, MySimpleUIParser::RuleStateDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(31);
    match(MySimpleUIParser::STATE);
    setState(32);
    antlrcpp::downCast<StateDeclContext *>(_localctx)->type = match(MySimpleUIParser::ID);
    setState(33);
    antlrcpp::downCast<StateDeclContext *>(_localctx)->name = match(MySimpleUIParser::ID);
    setState(34);
    match(MySimpleUIParser::ASSIGN);
    setState(35);
    antlrcpp::downCast<StateDeclContext *>(_localctx)->value = expression();
    setState(36);
    match(MySimpleUIParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RootComponentContext ------------------------------------------------------------------

MySimpleUIParser::RootComponentContext::RootComponentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MySimpleUIParser::ComponentCallContext* MySimpleUIParser::RootComponentContext::componentCall() {
  return getRuleContext<MySimpleUIParser::ComponentCallContext>(0);
}


size_t MySimpleUIParser::RootComponentContext::getRuleIndex() const {
  return MySimpleUIParser::RuleRootComponent;
}

void MySimpleUIParser::RootComponentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRootComponent(this);
}

void MySimpleUIParser::RootComponentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRootComponent(this);
}


std::any MySimpleUIParser::RootComponentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MySimpleUIVisitor*>(visitor))
    return parserVisitor->visitRootComponent(this);
  else
    return visitor->visitChildren(this);
}

MySimpleUIParser::RootComponentContext* MySimpleUIParser::rootComponent() {
  RootComponentContext *_localctx = _tracker.createInstance<RootComponentContext>(_ctx, getState());
  enterRule(_localctx, 4, MySimpleUIParser::RuleRootComponent);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    componentCall();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComponentCallContext ------------------------------------------------------------------

MySimpleUIParser::ComponentCallContext::ComponentCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MySimpleUIParser::ComponentCallContext::LBRACE() {
  return getToken(MySimpleUIParser::LBRACE, 0);
}

tree::TerminalNode* MySimpleUIParser::ComponentCallContext::RBRACE() {
  return getToken(MySimpleUIParser::RBRACE, 0);
}

tree::TerminalNode* MySimpleUIParser::ComponentCallContext::ID() {
  return getToken(MySimpleUIParser::ID, 0);
}

tree::TerminalNode* MySimpleUIParser::ComponentCallContext::LPAREN() {
  return getToken(MySimpleUIParser::LPAREN, 0);
}

tree::TerminalNode* MySimpleUIParser::ComponentCallContext::RPAREN() {
  return getToken(MySimpleUIParser::RPAREN, 0);
}

std::vector<MySimpleUIParser::ElementContext *> MySimpleUIParser::ComponentCallContext::element() {
  return getRuleContexts<MySimpleUIParser::ElementContext>();
}

MySimpleUIParser::ElementContext* MySimpleUIParser::ComponentCallContext::element(size_t i) {
  return getRuleContext<MySimpleUIParser::ElementContext>(i);
}

MySimpleUIParser::ParameterListContext* MySimpleUIParser::ComponentCallContext::parameterList() {
  return getRuleContext<MySimpleUIParser::ParameterListContext>(0);
}


size_t MySimpleUIParser::ComponentCallContext::getRuleIndex() const {
  return MySimpleUIParser::RuleComponentCall;
}

void MySimpleUIParser::ComponentCallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponentCall(this);
}

void MySimpleUIParser::ComponentCallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponentCall(this);
}


std::any MySimpleUIParser::ComponentCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MySimpleUIVisitor*>(visitor))
    return parserVisitor->visitComponentCall(this);
  else
    return visitor->visitChildren(this);
}

MySimpleUIParser::ComponentCallContext* MySimpleUIParser::componentCall() {
  ComponentCallContext *_localctx = _tracker.createInstance<ComponentCallContext>(_ctx, getState());
  enterRule(_localctx, 6, MySimpleUIParser::RuleComponentCall);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    antlrcpp::downCast<ComponentCallContext *>(_localctx)->componentName = match(MySimpleUIParser::ID);
    setState(46);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MySimpleUIParser::LPAREN) {
      setState(41);
      match(MySimpleUIParser::LPAREN);
      setState(43);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 124) != 0)) {
        setState(42);
        parameterList();
      }
      setState(45);
      match(MySimpleUIParser::RPAREN);
    }
    setState(48);
    match(MySimpleUIParser::LBRACE);
    setState(52);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MySimpleUIParser::ID) {
      setState(49);
      element();
      setState(54);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(55);
    match(MySimpleUIParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext ------------------------------------------------------------------

MySimpleUIParser::ParameterListContext::ParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MySimpleUIParser::ParameterContext *> MySimpleUIParser::ParameterListContext::parameter() {
  return getRuleContexts<MySimpleUIParser::ParameterContext>();
}

MySimpleUIParser::ParameterContext* MySimpleUIParser::ParameterListContext::parameter(size_t i) {
  return getRuleContext<MySimpleUIParser::ParameterContext>(i);
}

std::vector<tree::TerminalNode *> MySimpleUIParser::ParameterListContext::COMMA() {
  return getTokens(MySimpleUIParser::COMMA);
}

tree::TerminalNode* MySimpleUIParser::ParameterListContext::COMMA(size_t i) {
  return getToken(MySimpleUIParser::COMMA, i);
}


size_t MySimpleUIParser::ParameterListContext::getRuleIndex() const {
  return MySimpleUIParser::RuleParameterList;
}

void MySimpleUIParser::ParameterListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterList(this);
}

void MySimpleUIParser::ParameterListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterList(this);
}


std::any MySimpleUIParser::ParameterListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MySimpleUIVisitor*>(visitor))
    return parserVisitor->visitParameterList(this);
  else
    return visitor->visitChildren(this);
}

MySimpleUIParser::ParameterListContext* MySimpleUIParser::parameterList() {
  ParameterListContext *_localctx = _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 8, MySimpleUIParser::RuleParameterList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    parameter();
    setState(62);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MySimpleUIParser::COMMA) {
      setState(58);
      match(MySimpleUIParser::COMMA);
      setState(59);
      parameter();
      setState(64);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

MySimpleUIParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MySimpleUIParser::ExpressionContext* MySimpleUIParser::ParameterContext::expression() {
  return getRuleContext<MySimpleUIParser::ExpressionContext>(0);
}

tree::TerminalNode* MySimpleUIParser::ParameterContext::BIND() {
  return getToken(MySimpleUIParser::BIND, 0);
}


size_t MySimpleUIParser::ParameterContext::getRuleIndex() const {
  return MySimpleUIParser::RuleParameter;
}

void MySimpleUIParser::ParameterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter(this);
}

void MySimpleUIParser::ParameterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter(this);
}


std::any MySimpleUIParser::ParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MySimpleUIVisitor*>(visitor))
    return parserVisitor->visitParameter(this);
  else
    return visitor->visitChildren(this);
}

MySimpleUIParser::ParameterContext* MySimpleUIParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 10, MySimpleUIParser::RuleParameter);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MySimpleUIParser::BIND) {
      setState(65);
      match(MySimpleUIParser::BIND);
    }
    setState(68);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContext ------------------------------------------------------------------

MySimpleUIParser::ElementContext::ElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MySimpleUIParser::PropertyAssignmentContext* MySimpleUIParser::ElementContext::propertyAssignment() {
  return getRuleContext<MySimpleUIParser::PropertyAssignmentContext>(0);
}

MySimpleUIParser::ComponentCallContext* MySimpleUIParser::ElementContext::componentCall() {
  return getRuleContext<MySimpleUIParser::ComponentCallContext>(0);
}


size_t MySimpleUIParser::ElementContext::getRuleIndex() const {
  return MySimpleUIParser::RuleElement;
}

void MySimpleUIParser::ElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElement(this);
}

void MySimpleUIParser::ElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElement(this);
}


std::any MySimpleUIParser::ElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MySimpleUIVisitor*>(visitor))
    return parserVisitor->visitElement(this);
  else
    return visitor->visitChildren(this);
}

MySimpleUIParser::ElementContext* MySimpleUIParser::element() {
  ElementContext *_localctx = _tracker.createInstance<ElementContext>(_ctx, getState());
  enterRule(_localctx, 12, MySimpleUIParser::RuleElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(72);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(70);
      propertyAssignment();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(71);
      componentCall();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PropertyAssignmentContext ------------------------------------------------------------------

MySimpleUIParser::PropertyAssignmentContext::PropertyAssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MySimpleUIParser::PropertyAssignmentContext::COLON() {
  return getToken(MySimpleUIParser::COLON, 0);
}

tree::TerminalNode* MySimpleUIParser::PropertyAssignmentContext::SEMI() {
  return getToken(MySimpleUIParser::SEMI, 0);
}

tree::TerminalNode* MySimpleUIParser::PropertyAssignmentContext::ID() {
  return getToken(MySimpleUIParser::ID, 0);
}

MySimpleUIParser::ExpressionContext* MySimpleUIParser::PropertyAssignmentContext::expression() {
  return getRuleContext<MySimpleUIParser::ExpressionContext>(0);
}


size_t MySimpleUIParser::PropertyAssignmentContext::getRuleIndex() const {
  return MySimpleUIParser::RulePropertyAssignment;
}

void MySimpleUIParser::PropertyAssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPropertyAssignment(this);
}

void MySimpleUIParser::PropertyAssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPropertyAssignment(this);
}


std::any MySimpleUIParser::PropertyAssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MySimpleUIVisitor*>(visitor))
    return parserVisitor->visitPropertyAssignment(this);
  else
    return visitor->visitChildren(this);
}

MySimpleUIParser::PropertyAssignmentContext* MySimpleUIParser::propertyAssignment() {
  PropertyAssignmentContext *_localctx = _tracker.createInstance<PropertyAssignmentContext>(_ctx, getState());
  enterRule(_localctx, 14, MySimpleUIParser::RulePropertyAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    antlrcpp::downCast<PropertyAssignmentContext *>(_localctx)->propertyName = match(MySimpleUIParser::ID);
    setState(75);
    match(MySimpleUIParser::COLON);
    setState(76);
    antlrcpp::downCast<PropertyAssignmentContext *>(_localctx)->value = expression();
    setState(77);
    match(MySimpleUIParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

MySimpleUIParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MySimpleUIParser::LiteralContext* MySimpleUIParser::ExpressionContext::literal() {
  return getRuleContext<MySimpleUIParser::LiteralContext>(0);
}

MySimpleUIParser::IdentifierContext* MySimpleUIParser::ExpressionContext::identifier() {
  return getRuleContext<MySimpleUIParser::IdentifierContext>(0);
}


size_t MySimpleUIParser::ExpressionContext::getRuleIndex() const {
  return MySimpleUIParser::RuleExpression;
}

void MySimpleUIParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void MySimpleUIParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


std::any MySimpleUIParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MySimpleUIVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

MySimpleUIParser::ExpressionContext* MySimpleUIParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 16, MySimpleUIParser::RuleExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(81);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MySimpleUIParser::NUMBER:
      case MySimpleUIParser::STRING: {
        enterOuterAlt(_localctx, 1);
        setState(79);
        literal();
        break;
      }

      case MySimpleUIParser::ID:
      case MySimpleUIParser::AT_ID: {
        enterOuterAlt(_localctx, 2);
        setState(80);
        identifier();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LiteralContext ------------------------------------------------------------------

MySimpleUIParser::LiteralContext::LiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MySimpleUIParser::LiteralContext::NUMBER() {
  return getToken(MySimpleUIParser::NUMBER, 0);
}

tree::TerminalNode* MySimpleUIParser::LiteralContext::STRING() {
  return getToken(MySimpleUIParser::STRING, 0);
}


size_t MySimpleUIParser::LiteralContext::getRuleIndex() const {
  return MySimpleUIParser::RuleLiteral;
}

void MySimpleUIParser::LiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLiteral(this);
}

void MySimpleUIParser::LiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MySimpleUIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLiteral(this);
}


std::any MySimpleUIParser::LiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MySimpleUIVisitor*>(visitor))
    return parserVisitor->visitLiteral(this);
  else
    return visitor->visitChildren(this);
}

MySimpleUIParser::LiteralContext* MySimpleUIParser::literal() {
  LiteralContext *_localctx = _tracker.createInstance<LiteralContext>(_ctx, getState());
  enterRule(_localctx, 18, MySimpleUIParser::RuleLiteral);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    _la = _input->LA(1);
    if (!(_la == MySimpleUIParser::NUMBER

    || _la == MySimpleUIParser::STRING)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------
